feat: resuming the learning